[gd_scene load_steps=143 format=2]

[ext_resource path="res://scenes/game/MapGenerator.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/floor/FloorDefault.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/floor/EmptyFloor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/PackedScenes.gd" type="Script" id=6]
[ext_resource path="res://scenes/wisps/WispBase.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/MapManager.gd" type="Script" id=8]
[ext_resource path="res://scenes/levels/Island01/Island02.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/Island01/Jungle01.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/floor/FloorWater.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/wisps/WaterWisp.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/floor/FloorWaterFountain.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/floor/FloorCrumble.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/entities/Rock.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/floor/FloorBeach.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/blocks/BlockDefault.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/blocks/BlockEmpty.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/blocks/BlockRock.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/floor/FloorLava.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/wisps/WispLava.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/blocks/BlockWisp.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/entities/SaltPillarSmall.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/entities/Palmtree.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/blocks/BlockPalmtree.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/levels/test/TestMap.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/entities/Column.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/entities/WallX.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/entities/WallY.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/floor/FloorEmptyInaccesible.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/wisps/WispQuake.tscn" type="PackedScene" id=31]
[ext_resource path="res://scenes/wisps/WispFire.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/wisps/WispSand.tscn" type="PackedScene" id=33]
[ext_resource path="res://scenes/game/MapArrayCreator.gd" type="Script" id=34]
[ext_resource path="res://scenes/floor/FloorChkRed.tscn" type="PackedScene" id=35]
[ext_resource path="res://scenes/floor/FloorChkrBlack.tscn" type="PackedScene" id=36]
[ext_resource path="res://scenes/blocks/BlockChkrBlack.tscn" type="PackedScene" id=37]
[ext_resource path="res://scenes/blocks/BlockChkrRed.tscn" type="PackedScene" id=38]
[ext_resource path="res://scenes/entities/CheckersBlack.tscn" type="PackedScene" id=39]
[ext_resource path="res://scenes/entities/CheckersRed.tscn" type="PackedScene" id=40]
[ext_resource path="res://scenes/blocks/BlockCheckPieceBlack.tscn" type="PackedScene" id=41]
[ext_resource path="res://scenes/blocks/BlockCheckPieceRed.tscn" type="PackedScene" id=42]
[ext_resource path="res://scenes/entities/RockSinking.tscn" type="PackedScene" id=43]
[ext_resource path="res://scenes/floor/FloorBottomless.tscn" type="PackedScene" id=44]
[ext_resource path="res://scenes/game/Level.gd" type="Script" id=45]
[ext_resource path="res://scenes/levels/Dungeon01/Room01.tscn" type="PackedScene" id=46]
[ext_resource path="res://scenes/floor/FloorOil.tscn" type="PackedScene" id=47]
[ext_resource path="res://scenes/entities/Flame.tscn" type="PackedScene" id=48]
[ext_resource path="res://scenes/entities/DoorRight.tscn" type="PackedScene" id=49]
[ext_resource path="res://scenes/entities/DoorLeft.tscn" type="PackedScene" id=50]
[ext_resource path="res://scenes/game/Rendered.gd" type="Script" id=51]
[ext_resource path="res://scenes/floor/FloorDungeon.tscn" type="PackedScene" id=52]
[ext_resource path="res://scenes/blocks/BlockDungeon.tscn" type="PackedScene" id=53]
[ext_resource path="res://scenes/levels/Dungeon01/Room03.tscn" type="PackedScene" id=54]
[ext_resource path="res://scenes/levels/Dungeon01/Room02.tscn" type="PackedScene" id=55]
[ext_resource path="res://scenes/game/Floor.tscn" type="PackedScene" id=56]
[ext_resource path="res://scenes/game/Entities.tscn" type="PackedScene" id=57]
[ext_resource path="res://scenes/floor/FloorEmptyAccesible.tscn" type="PackedScene" id=58]
[ext_resource path="res://scenes/floor/FloorStone.tscn" type="PackedScene" id=59]
[ext_resource path="res://scenes/entities/Torch.tscn" type="PackedScene" id=60]
[ext_resource path="res://scenes/levels/Furnace01/Furnace01.tscn" type="PackedScene" id=61]
[ext_resource path="res://scenes/entities/DoorNorth.tscn" type="PackedScene" id=62]
[ext_resource path="res://scenes/entities/DoorSouth.tscn" type="PackedScene" id=63]
[ext_resource path="res://scenes/floor/FloorEmptyBlocked.tscn" type="PackedScene" id=64]
[ext_resource path="res://scenes/floor/FloorSalt.tscn" type="PackedScene" id=65]
[ext_resource path="res://scenes/blocks/BlockSalt.tscn" type="PackedScene" id=66]
[ext_resource path="res://scenes/levels/Dungeon01/Room04.tscn" type="PackedScene" id=67]
[ext_resource path="res://scenes/entities/SaltPillarBig.tscn" type="PackedScene" id=68]
[ext_resource path="res://scenes/entities/TrapDoor.tscn" type="PackedScene" id=69]
[ext_resource path="res://scenes/floor/FloorTrapDoor.tscn" type="PackedScene" id=70]
[ext_resource path="res://scenes/blocks/BlockButton.tscn" type="PackedScene" id=71]
[ext_resource path="res://scenes/floor/FloorButton.tscn" type="PackedScene" id=72]
[ext_resource path="res://scenes/levels/Dungeon01/Room05.tscn" type="PackedScene" id=73]
[ext_resource path="res://scenes/levels/Island01/Island01.tscn" type="PackedScene" id=74]
[ext_resource path="res://scenes/floor/FloorDeepWater.tscn" type="PackedScene" id=75]
[ext_resource path="res://scenes/floor/FloorWhirlpoolNE.tscn" type="PackedScene" id=76]
[ext_resource path="res://scenes/floor/FloorWhirlpoolSW.tscn" type="PackedScene" id=77]
[ext_resource path="res://scenes/floor/FloorWhirlpoolSE.tscn" type="PackedScene" id=78]
[ext_resource path="res://scenes/floor/FloorWhirlpoolNW.tscn" type="PackedScene" id=79]
[ext_resource path="res://scenes/blocks/BlockWispWater.tscn" type="PackedScene" id=80]
[ext_resource path="res://scenes/entities/EntityBlockHolder.tscn" type="PackedScene" id=81]
[ext_resource path="res://scenes/floor/FloorStairsDown.tscn" type="PackedScene" id=82]
[ext_resource path="res://scenes/entities/StoneLid.tscn" type="PackedScene" id=83]
[ext_resource path="res://scenes/blocks/BlockStoneLid.tscn" type="PackedScene" id=84]
[ext_resource path="res://scenes/floor/FloorStairsUp.tscn" type="PackedScene" id=85]
[ext_resource path="res://scenes/entities/StairsUp.tscn" type="PackedScene" id=86]
[ext_resource path="res://scenes/levels/EmptyLevel.tscn" type="PackedScene" id=87]
[ext_resource path="res://scenes/floor/FloorOilFountain.tscn" type="PackedScene" id=88]
[ext_resource path="res://scenes/entities/TorchOn.tscn" type="PackedScene" id=89]
[ext_resource path="res://scenes/levels/Dungeon02/Dungeon02_01.tscn" type="PackedScene" id=90]
[ext_resource path="res://scenes/game/DiscardObject.tscn" type="PackedScene" id=91]
[ext_resource path="res://scenes/floor/FloorCliff.tscn" type="PackedScene" id=92]
[ext_resource path="res://scenes/entities/PalmtreeSinking.tscn" type="PackedScene" id=93]
[ext_resource path="res://scenes/levels/Island01/Jungle02.tscn" type="PackedScene" id=94]
[ext_resource path="res://scenes/floor/FloorCliffSide.tscn" type="PackedScene" id=95]
[ext_resource path="res://scenes/floor/FloorCliffBack.tscn" type="PackedScene" id=96]
[ext_resource path="res://scenes/entities/SaltPillarMed.tscn" type="PackedScene" id=97]
[ext_resource path="res://scenes/levels/Dungeon02/Dungeon02_02.tscn" type="PackedScene" id=98]
[ext_resource path="res://scenes/entities/PalmtreeCoconut.tscn" type="PackedScene" id=99]
[ext_resource path="res://scenes/levels/Island01/Jungle03.tscn" type="PackedScene" id=100]
[ext_resource path="res://scenes/levels/Volcano01/Volcano01_01.tscn" type="PackedScene" id=101]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMines01_01.tscn" type="PackedScene" id=102]
[ext_resource path="res://scenes/wands/MineralWand.tscn" type="PackedScene" id=103]
[ext_resource path="res://scenes/blocks/BlockWandMineral.tscn" type="PackedScene" id=104]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMinesDark01.tscn" type="PackedScene" id=105]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMinesDark02.tscn" type="PackedScene" id=106]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMines01_02.tscn" type="PackedScene" id=107]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMines01_03.tscn" type="PackedScene" id=108]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMines01_04.tscn" type="PackedScene" id=109]
[ext_resource path="res://scenes/levels/SaltMines01/SaltMines01_05.tscn" type="PackedScene" id=110]
[ext_resource path="res://scenes/levels/Canyon01/Canyon01_01.tscn" type="PackedScene" id=111]
[ext_resource path="res://scenes/levels/Canyon01/Canyon01_02.tscn" type="PackedScene" id=112]
[ext_resource path="res://scenes/levels/Canyon01/Canyon01_03.tscn" type="PackedScene" id=113]
[ext_resource path="res://scenes/levels/Extra/Checkers01.tscn" type="PackedScene" id=114]
[ext_resource path="res://scenes/levels/Island01/Island03.tscn" type="PackedScene" id=115]
[ext_resource path="res://scenes/game/UITop.gd" type="Script" id=116]
[ext_resource path="res://scenes/UI/EmptyHeart.tscn" type="PackedScene" id=117]
[ext_resource path="res://scenes/UI/FullHeart.tscn" type="PackedScene" id=118]
[ext_resource path="res://assets/fonts/joystix monospace.otf" type="DynamicFontData" id=119]
[ext_resource path="res://scenes/levels/Side01/SideCave01.tscn" type="PackedScene" id=120]
[ext_resource path="res://scenes/UI/UIHearts.tscn" type="PackedScene" id=121]
[ext_resource path="res://scenes/entities/Heart.tscn" type="PackedScene" id=122]
[ext_resource path="res://scenes/blocks/BlockHeart.tscn" type="PackedScene" id=123]
[ext_resource path="res://scenes/levels/Extra/StartingMenu.tscn" type="PackedScene" id=124]
[ext_resource path="res://assets/floor/sand.png" type="Texture" id=125]
[ext_resource path="res://assets/entities/palmtree.png" type="Texture" id=126]
[ext_resource path="res://assets/background/title.png" type="Texture" id=127]
[ext_resource path="res://assets/background/title2.png" type="Texture" id=128]
[ext_resource path="res://scenes/game/PressStart.gd" type="Script" id=129]
[ext_resource path="res://scenes/floor/FloorEmptyAccesibleWater.tscn" type="PackedScene" id=130]
[ext_resource path="res://scenes/blocks/BlockPlayer.tscn" type="PackedScene" id=131]
[ext_resource path="res://scenes/entities/Sign.tscn" type="PackedScene" id=132]
[ext_resource path="res://scenes/blocks/BlockSign.tscn" type="PackedScene" id=133]
[ext_resource path="res://scenes/game/TimeLapse.gd" type="Script" id=134]
[ext_resource path="res://scenes/blocks/BlockWandWater.tscn" type="PackedScene" id=135]
[ext_resource path="res://scenes/wands/WaterWand.tscn" type="PackedScene" id=136]
[ext_resource path="res://scenes/levels/WaterTemple01/WaterTemple01.tscn" type="PackedScene" id=137]

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 119 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 119 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 119 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 119 )

[sub_resource type="PackedScene" id=1]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "EmptyEntity", "Node2D" ),
"node_count": 1,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 0, 0 ),
"variants": [  ],
"version": 2
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchor_right = 0.23
anchor_bottom = 0.23
margin_right = 32.0
margin_bottom = 20.48
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
anchor_left = 0.415
anchor_top = 0.445
anchor_right = 0.42
anchor_bottom = 0.486
margin_left = -2.0
margin_top = 0.0800018
margin_right = 68.0
margin_bottom = 3.584
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"

[node name="UI" type="CanvasLayer" parent="."]
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )

[node name="UITop" type="ColorRect" parent="UI"]
anchor_right = 0.25
anchor_bottom = 0.001
margin_bottom = 24.976
color = Color( 0, 0, 0, 1 )
script = ExtResource( 116 )
full_heart = ExtResource( 118 )
empty_heart = ExtResource( 117 )
ui_hearts_pack = ExtResource( 121 )

[node name="Label" type="Label" parent="UI/UITop"]
anchor_right = 1.0
margin_top = 14.0
margin_bottom = 28.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 2 )
align = 1

[node name="UIHearts" parent="UI/UITop" instance=ExtResource( 121 )]

[node name="UIBottom" type="ColorRect" parent="UI"]
anchor_right = 0.25
anchor_bottom = 0.001
margin_top = 246.0
margin_bottom = 254.976
color = Color( 0, 0, 0, 1 )

[node name="TimeLapse" type="CanvasLayer" parent="."]
visible = false
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )
script = ExtResource( 134 )

[node name="HideTimer" type="Timer" parent="TimeLapse"]
wait_time = 3.4
one_shot = true

[node name="ColorRect" type="ColorRect" parent="TimeLapse"]
anchor_right = 0.25
anchor_bottom = 0.25
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TimeLapse/ColorRect"]
anchor_left = 0.281
anchor_top = 0.472
anchor_right = 0.637
anchor_bottom = 0.515
margin_left = 43.888
margin_top = -0.0454559
margin_right = -47.896
margin_bottom = 2.10718
custom_fonts/font = SubResource( 5 )
text = "LOADING ISLAND..."

[node name="TitleScreen" type="CanvasLayer" parent="."]
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="TitleScreen"]
anchor_right = 0.25
anchor_bottom = 0.25
color = Color( 0, 0, 0, 1 )

[node name="PressStart" type="Label" parent="TitleScreen/ColorRect"]
anchor_left = 0.377
anchor_top = 0.582
anchor_right = 0.392
anchor_bottom = 0.582
margin_left = 17.385
margin_top = 29.008
margin_right = 105.385
margin_bottom = 43.008
custom_fonts/font = SubResource( 3 )
text = "PRESS START"
script = ExtResource( 129 )

[node name="PressStartTimer" type="Timer" parent="TitleScreen/ColorRect/PressStart"]
wait_time = 0.5
autostart = true

[node name="Beach" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.432
anchor_top = 0.203
anchor_right = 0.432
anchor_bottom = 0.203
margin_left = 22.16
margin_top = 14.032
margin_right = 54.16
margin_bottom = 35.032
texture = ExtResource( 125 )

[node name="Beach4" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.513
anchor_top = 0.297
anchor_right = 0.526
anchor_bottom = 0.324
margin_left = 2.06499
margin_top = -0.0319977
margin_right = 20.7
margin_bottom = 14.056
texture = ExtResource( 125 )

[node name="Beach2" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.447
anchor_top = 0.299
anchor_right = 0.46
anchor_bottom = 0.366
margin_left = -3.60001
margin_top = -0.543999
margin_right = 17.6
margin_bottom = 3.304
texture = ExtResource( 125 )

[node name="Beach3" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.474
anchor_top = 0.329
anchor_right = 0.527
anchor_bottom = 0.347
texture = ExtResource( 125 )

[node name="Palmtree" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.446
anchor_top = 0.135
anchor_right = 0.486
anchor_bottom = 0.135
margin_left = 7.23
margin_top = 1.44
margin_right = 33.43
margin_bottom = 40.44
texture = ExtResource( 126 )

[node name="Lay" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.246
anchor_top = 0.275
anchor_right = 0.5
anchor_bottom = 0.275
texture = ExtResource( 127 )

[node name="Land" type="TextureRect" parent="TitleScreen/ColorRect"]
anchor_left = 0.514
anchor_top = 0.243
anchor_right = 0.541
anchor_bottom = 0.243
texture = ExtResource( 128 )

[node name="Level" type="Node2D" parent="."]
script = ExtResource( 45 )

[node name="EmptyLevel" parent="Level" instance=ExtResource( 87 )]
visible = false

[node name="StartingMenu" parent="Level" instance=ExtResource( 124 )]
visible = false

[node name="Dungeon01" type="Node2D" parent="Level"]

[node name="Room01" parent="Level/Dungeon01" instance=ExtResource( 46 )]
visible = false

[node name="Room02" parent="Level/Dungeon01" instance=ExtResource( 55 )]
visible = false

[node name="Room03" parent="Level/Dungeon01" instance=ExtResource( 54 )]
visible = false

[node name="Room04" parent="Level/Dungeon01" instance=ExtResource( 67 )]
visible = false

[node name="Room05" parent="Level/Dungeon01" instance=ExtResource( 73 )]
visible = false

[node name="SideAreas01" type="Node2D" parent="Level"]

[node name="SideCave01" parent="Level/SideAreas01" instance=ExtResource( 120 )]
visible = false

[node name="Island01" type="Node2D" parent="Level"]

[node name="Island01" parent="Level/Island01" instance=ExtResource( 74 )]
visible = false

[node name="Island02" parent="Level/Island01" instance=ExtResource( 9 )]
visible = false

[node name="Island03" parent="Level/Island01" instance=ExtResource( 115 )]
visible = false

[node name="Jungle01" parent="Level/Island01" instance=ExtResource( 10 )]
visible = false

[node name="Jungle02" parent="Level/Island01" instance=ExtResource( 94 )]
visible = false

[node name="Jungle03" parent="Level/Island01" instance=ExtResource( 100 )]
visible = false

[node name="WaterTemple01" parent="Level/Island01" instance=ExtResource( 137 )]
visible = false

[node name="Furnace01" type="Node2D" parent="Level"]

[node name="Furnace01" parent="Level/Furnace01" instance=ExtResource( 61 )]
visible = false

[node name="Dungeon02" type="Node2D" parent="Level"]

[node name="Dungeon02_01" parent="Level/Dungeon02" instance=ExtResource( 90 )]
visible = false

[node name="Dungeon02_02" parent="Level/Dungeon02" instance=ExtResource( 98 )]
visible = false

[node name="Volcano01" type="Node2D" parent="Level"]

[node name="Volcano01_01" parent="Level/Volcano01" instance=ExtResource( 101 )]
visible = false

[node name="SaltMines01" type="Node2D" parent="Level"]

[node name="SaltMines01_01" parent="Level/SaltMines01" instance=ExtResource( 102 )]
visible = false

[node name="SaltMinesDark01" parent="Level/SaltMines01" instance=ExtResource( 105 )]
visible = false

[node name="SaltMines01_02" parent="Level/SaltMines01" instance=ExtResource( 107 )]
visible = false

[node name="SaltMinesDark02" parent="Level/SaltMines01" instance=ExtResource( 106 )]
visible = false

[node name="SaltMines01_03" parent="Level/SaltMines01" instance=ExtResource( 108 )]
visible = false

[node name="SaltMines01_04" parent="Level/SaltMines01" instance=ExtResource( 109 )]
visible = false

[node name="SaltMines01_05" parent="Level/SaltMines01" instance=ExtResource( 110 )]
visible = false

[node name="Canyon01" type="Node2D" parent="Level"]

[node name="Canyon01_01" parent="Level/Canyon01" instance=ExtResource( 111 )]
visible = false

[node name="Canyon01_02" parent="Level/Canyon01" instance=ExtResource( 112 )]
visible = false

[node name="Canyon01_03" parent="Level/Canyon01" instance=ExtResource( 113 )]
visible = false

[node name="Extras" type="Node2D" parent="Level"]

[node name="Checkers01" parent="Level/Extras" instance=ExtResource( 114 )]
visible = false

[node name="TestMaps" type="Node2D" parent="Level"]

[node name="TestMap" parent="Level/TestMaps" instance=ExtResource( 26 )]
visible = false

[node name="MapManager" type="Node" parent="."]
script = ExtResource( 8 )
discard_object = ExtResource( 91 )

[node name="MapGenerator" type="Node" parent="MapManager"]
script = ExtResource( 1 )

[node name="MapArrayCreator" type="Node" parent="MapManager/MapGenerator"]
script = ExtResource( 34 )

[node name="PackedScenes" type="Node" parent="MapManager/MapGenerator"]
script = ExtResource( 6 )
floorDefault = ExtResource( 3 )
floorEmpty = ExtResource( 5 )
floor_empty_no_access = ExtResource( 30 )
floor_empty_access = ExtResource( 58 )
floor_empty_access_water = ExtResource( 130 )
floor_empty_blocked = ExtResource( 64 )
waterFloor = ExtResource( 11 )
deep_water = ExtResource( 75 )
fountainFloor = ExtResource( 13 )
crumbleFloor = ExtResource( 14 )
lavaFloor = ExtResource( 20 )
sandBeach = ExtResource( 16 )
checker_black = ExtResource( 36 )
checker_red = ExtResource( 35 )
bottomless = ExtResource( 44 )
floor_dungeon = ExtResource( 52 )
floor_stone = ExtResource( 59 )
floor_salt = ExtResource( 65 )
floor_trap_door = ExtResource( 70 )
floor_button = ExtResource( 72 )
whirlpool_ne = ExtResource( 76 )
whirlpool_nw = ExtResource( 79 )
whirlpool_sw = ExtResource( 77 )
whirlpool_se = ExtResource( 78 )
stairs_down = ExtResource( 82 )
stairs_up = ExtResource( 85 )
cliff = ExtResource( 92 )
cliff_side = ExtResource( 95 )
cliff_back = ExtResource( 96 )
oil_tile = ExtResource( 47 )
oil_fountain = ExtResource( 88 )
block_holder = ExtResource( 81 )
emptyEntity = SubResource( 1 )
palmtree = ExtResource( 24 )
palmtree_sunk = ExtResource( 93 )
palmtree_coco = ExtResource( 99 )
wall_y = ExtResource( 29 )
wall_x = ExtResource( 28 )
player = ExtResource( 4 )
rock = ExtResource( 15 )
rock_sinking = ExtResource( 43 )
columnBody = ExtResource( 27 )
checker_piece_black = ExtResource( 39 )
checker_piece_red = ExtResource( 40 )
door_left = ExtResource( 50 )
door_right = ExtResource( 49 )
door_north = ExtResource( 62 )
door_south = ExtResource( 63 )
salt_pillar = ExtResource( 68 )
salt_pile = ExtResource( 97 )
salt_tile = ExtResource( 23 )
trap_door = ExtResource( 69 )
wispBase = ExtResource( 7 )
wispWater = ExtResource( 12 )
wisp_lava = ExtResource( 21 )
wisp_quake = ExtResource( 31 )
wisp_sand = ExtResource( 33 )
wisp_fire = ExtResource( 32 )
stone_lid = ExtResource( 83 )
entity_stairs_up = ExtResource( 86 )
entity_flame = ExtResource( 48 )
entity_torch = ExtResource( 60 )
entity_torch_on = ExtResource( 89 )
wand_mineral = ExtResource( 103 )
wand_water = ExtResource( 136 )
heart = ExtResource( 122 )
sign_board = ExtResource( 132 )
block_empty = ExtResource( 18 )
block_palmtree = ExtResource( 25 )
block_default = ExtResource( 17 )
block_rock = ExtResource( 19 )
block_wisp = ExtResource( 22 )
block_chkbl = ExtResource( 37 )
block_chkrd = ExtResource( 38 )
block_chk_piece_black = ExtResource( 41 )
block_chk_piece_red = ExtResource( 42 )
block_dungeon = ExtResource( 53 )
block_salt = ExtResource( 66 )
block_button = ExtResource( 71 )
block_water_wisp = ExtResource( 80 )
block_stone_lid = ExtResource( 84 )
block_wand_mineral = ExtResource( 104 )
block_wand_water = ExtResource( 135 )
block_heart = ExtResource( 123 )
block_player = ExtResource( 131 )
block_sign = ExtResource( 133 )

[node name="Rendered" type="Node2D" parent="."]
script = ExtResource( 51 )
ysort_floor = ExtResource( 56 )
ysort_entities = ExtResource( 57 )

[node name="Floor" parent="Rendered" instance=ExtResource( 56 )]

[node name="Entities" parent="Rendered" instance=ExtResource( 57 )]

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="TimeLapse/HideTimer" to="TimeLapse" method="_on_HideTimer_timeout"]
[connection signal="timeout" from="TitleScreen/ColorRect/PressStart/PressStartTimer" to="TitleScreen/ColorRect/PressStart" method="_on_PressStartTimer_timeout"]
